Add unit/integration testing support for all servers #11